--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="row">
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/project1.png" class="project-images"/>
+              <img src="images/project1.png" style="width:300px;height:300px;"/>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
@@ -160,7 +160,7 @@
           <!-- End .project -->
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/project2+3.png" class="project-images"/>
+              <img src="images/project2+3.png" style="width:300px;height:300px;"/>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
@@ -180,7 +180,7 @@
 
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/project4.png" class="project-images"/>
+              <img src="images/project4.png" style="width:300px;height:300px;"/>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
@@ -199,7 +199,7 @@
           <!-- End .project -->
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/project5.png" class="project-images"/>
+              <img src="images/project5.png" style="width:300px;height:300px;"/>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
