--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div class="education-block">
         <h3>알파코캠퍼스</h3>
         <span class="education-date">October 2022 - March 2023</span>
-        <h4>알파코캠퍼스</h4>
+        <h4>알파코캠퍼스 부트캠프 4기</h4>
         <ul>
           <li>2022 10 - Python을 이용한 데이터 분석 및 시각화</li>
           <li>2022 11 - Python을 이용한 데이터 분석 및 시각화</li>
@@ -145,15 +145,12 @@
             </div>
             <!-- End .project-image -->
             <div class="project-info">
-              <h3>Project Name Here</h3>
+              <h3>철강 공장 제조 데이터 분석</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
-                tortor nec nulla commodo malesuada sit amet vel lacus. Fusce
-                eget efficitur libero. Morbi dapibus porta quam laoreet
-                placerat.
+                 철강 공장 제조 덤프 데이터를 통한 데이터를 분석하고 <br>
+                 ML을 통하여 솔루션을 도출
               </p>
-              <a href="#">View Project</a>
+              <a href="project_template/RPA_4기_프로젝트1.pdf" download="Joo_project_1.pdf">View Project</a>
             </div>
             <!-- End .project-info -->
           </div>
@@ -163,16 +160,12 @@
               <img src="images/project2+3.png" style="width:300px;height:300px;"/>
             </div>
             <!-- End .project-image -->
-            <div class="project-info">
-              <h3>Project Name Here</h3>
+            <div class="project-info" style="margin-left: 300px;">
+              <h3>데이터 분석 프로젝트 비지니스 문제해결</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
-                tortor nec nulla commodo malesuada sit amet vel lacus. Fusce
-                eget efficitur libero. Morbi dapibus porta quam laoreet
-                placerat.
+                 육아용품 쇼핑몰 데이터를 분석하여 현 쇼핑몰의 문제점을 찾고 ML을 통하여 솔루션을 도출
               </p>
-              <a href="#">View Project</a>
+              <a href="project_template/RPA_4기_프로젝트2+3.pdf" download="Joo_project_2+3.pdf">View Project</a>
             </div>
             <!-- End .project-info -->
           </div>
@@ -184,15 +177,12 @@
             </div>
             <!-- End .project-image -->
             <div class="project-info">
-              <h3>Project Name Here</h3>
+              <h3>탐색적 데이터 분석과 머신러닝 모델링</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
-                tortor nec nulla commodo malesuada sit amet vel lacus. Fusce
-                eget efficitur libero. Morbi dapibus porta quam laoreet
-                placerat.
+                노인 복지 관련 공공데이터를 수집하고 데이터를 분석 및 시각화하여 문제점을 도출
+                ML을 통하여 문제점에 대한 솔루션을 도출
               </p>
-              <a href="#">View Project</a>
+              <a href="project_template/RPA_4기_프로젝트4.pdf" download="Joo_project_4.pdf">View Project</a>
             </div>
             <!-- End .project-info -->
           </div>
@@ -211,7 +201,7 @@
                 eget efficitur libero. Morbi dapibus porta quam laoreet
                 placerat.
               </p>
-              <a href="#">View Project</a>
+              <a href="project_template/RPA_4기_프로젝트5.pdf" download="Joo_project_5.pdf">View Project</a>
             </div>
             <!-- End .project-info -->
           </div>
@@ -250,33 +240,8 @@
           <div class="col-sm-5 social">
             <ul>
               <li>
-                <a href="https://github.com/" target="_blank"
+                <a href="https://github.com/joohyosung" target="_blank"
                   ><i class="fa fa-github" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a href="https://stackoverflow.com/" target="_blank"
-                  ><i class="fa fa-stack-overflow" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a href="https://linkedin.com/" target="_blank"
-                  ><i class="fa fa-linkedin" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a href="https://www.facebook.com/" target="_blank"
-                  ><i class="fa fa-facebook" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a href="https://twitter.com/" target="_blank"
-                  ><i class="fa fa-twitter" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a href="https://plus.google.com/" target="_blank"
-                  ><i class="fa fa-google-plus" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
