--- a/index.html
+++ b/index.html
@@ -81,8 +81,13 @@
               저는 ‘자기 계발을 통해 끊임없는 발전을 계속하고, 이러한 가치를 발휘하기 위해 노력하는가.’를 중요하게 생각합니다. 
               자기 계발이란, 혼자만의 발전이 아닌 스스로와 속한 조직과 함께 발전하는 원동력이라고 생각합니다. 
               저는 나 혼자만의 발전이 아닌 내가 속한 조직과의 발전을 위한 자기 계발을 가장 큰 가치로 삼고, 이를 통해 느끼는 성취감을 원동력으로 발전해왔습니다. 
-              이러한 저의 강점을 잘 살릴 수 있는 직무 속에서 성취감을 가지고 일하고 싶습니다.
+              이러한 저의 강점을 잘 살릴 수 있는 직무 속에서 성취감을 가지고 일하고 싶습니다.<br>
+              My Github Address : 
+              <a href="https://github.com/joohyosung" target="_blank"
+                  ><i class="fa fa-github" aria-hidden="true"></i
+                ></a>
             </p>
+            
           </div>
         </div>
       </div>
@@ -147,8 +152,7 @@
             <div class="project-info">
               <h3>철강 공장 제조 데이터 분석</h3>
               <p>
-                 철강 공장 제조 덤프 데이터를 통한 데이터를 분석하고 <br>
-                 ML을 통하여 솔루션을 도출
+                 철강 공장 제조 덤프 데이터를 통한 데이터를 분석 및 시각화를 실시하고 ML을 통하여 솔루션을 도출
               </p>
               <a href="project_template/RPA_4기_프로젝트1.pdf" download="Joo_project_1.pdf">View Project</a>
             </div>
@@ -160,10 +164,10 @@
               <img src="images/project2+3.png" style="width:300px;height:300px;"/>
             </div>
             <!-- End .project-image -->
-            <div class="project-info" style="margin-left: 300px;">
+            <div class="project-info">
               <h3>데이터 분석 프로젝트 비지니스 문제해결</h3>
               <p>
-                 육아용품 쇼핑몰 데이터를 분석하여 현 쇼핑몰의 문제점을 찾고 ML을 통하여 솔루션을 도출
+                 육아용품 쇼핑몰 데이터를 분석하여 시각화를 진행한 후 현 쇼핑몰의 문제점을 찾고 ML을 통하여 솔루션을 도출
               </p>
               <a href="project_template/RPA_4기_프로젝트2+3.pdf" download="Joo_project_2+3.pdf">View Project</a>
             </div>
@@ -177,7 +181,7 @@
             </div>
             <!-- End .project-image -->
             <div class="project-info">
-              <h3>탐색적 데이터 분석과 머신러닝 모델링</h3>
+              <h3>데이터 기반 문제해결 프로젝트</h3>
               <p>
                 노인 복지 관련 공공데이터를 수집하고 데이터를 분석 및 시각화하여 문제점을 도출
                 ML을 통하여 문제점에 대한 솔루션을 도출
@@ -193,13 +197,10 @@
             </div>
             <!-- End .project-image -->
             <div class="project-info">
-              <h3>Project Name Here</h3>
+              <h3>웹 어플리케이션 구현</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
-                tortor nec nulla commodo malesuada sit amet vel lacus. Fusce
-                eget efficitur libero. Morbi dapibus porta quam laoreet
-                placerat.
+                Django를 이용한 웹 어플리케이션 구현 rest-framework를 이용하여 JWT 시스템으로
+                로그인 및 유저 관리 시스템을 구축하고 '모여방'이라는 웹 어플리케이션 컨셉트에 맞는 게시판을 구성
               </p>
               <a href="project_template/RPA_4기_프로젝트5.pdf" download="Joo_project_5.pdf">View Project</a>
             </div>
@@ -229,7 +230,7 @@
         <div class="row">
           <div class="col-sm-5 copyright">
             <p>
-              Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+              Copyright &copy; <span id="current-year">2023</span> Joo Hyosung
             </p>
           </div>
           <div class="col-sm-2 top">
