--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         <ul>
           <li>2022 10 - Python을 이용한 데이터 분석 및 시각화</li>
           <li>2022 11 - Python을 이용한 데이터 분석 및 시각화</li>
+          <li>2022 12 - Python을 이용한 데이터 분석 및 시각화</li>
           <li>2023 01 - Python(Django)을 이용한 웹 구성하기</li>
           <li>2023 02 - Python(Django)을 이용한 웹 구성하기</li>
           <li>2023 03 - UI-Path를 이용한 RPA프로그래밍</li>
@@ -154,7 +155,8 @@
               <p>
                  철강 공장 제조 덤프 데이터를 통한 데이터를 분석 및 시각화를 실시하고 ML을 통하여 솔루션을 도출
               </p>
-              <a href="project_template/RPA_4기_프로젝트1.pdf" download="Joo_project_1.pdf">View Project</a>
+              <a href="project_template/RPA_4기_프로젝트1.pdf" download="Joo_project_1.pdf">View Project</a><br>
+              <a href="https://github.com/joohyosung/python_data_analysis_project/tree/main/RPA_4%EA%B8%B0_%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B81_8%EC%A1%B0(First-Project-8-master)">View Code</a>
             </div>
             <!-- End .project-info -->
           </div>
@@ -169,7 +171,8 @@
               <p>
                  육아용품 쇼핑몰 데이터를 분석하여 시각화를 진행한 후 현 쇼핑몰의 문제점을 찾고 ML을 통하여 솔루션을 도출
               </p>
-              <a href="project_template/RPA_4기_프로젝트2+3.pdf" download="Joo_project_2+3.pdf">View Project</a>
+              <a href="project_template/RPA_4기_프로젝트2+3.pdf" download="Joo_project_2+3.pdf">View Project</a><br>
+              <a href="https://github.com/joohyosung/python_data_analysis_project/tree/main/project2%2B3">View Code</a>
             </div>
             <!-- End .project-info -->
           </div>
@@ -186,7 +189,8 @@
                 노인 복지 관련 공공데이터를 수집하고 데이터를 분석 및 시각화하여 문제점을 도출
                 ML을 통하여 문제점에 대한 솔루션을 도출
               </p>
-              <a href="project_template/RPA_4기_프로젝트4.pdf" download="Joo_project_4.pdf">View Project</a>
+              <a href="project_template/RPA_4기_프로젝트4.pdf" download="Joo_project_4.pdf">View Project</a><br>
+              <a href="https://github.com/joohyosung/python_data_analysis_project/tree/main/RPA_4%EA%B8%B0_%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B84_5%EC%A1%B0">View Code</a>
             </div>
             <!-- End .project-info -->
           </div>
@@ -202,7 +206,8 @@
                 Django를 이용한 웹 어플리케이션 구현 rest-framework를 이용하여 JWT 시스템으로
                 로그인 및 유저 관리 시스템을 구축하고 '모여방'이라는 웹 어플리케이션 컨셉트에 맞는 게시판을 구성
               </p>
-              <a href="project_template/RPA_4기_프로젝트5.pdf" download="Joo_project_5.pdf">View Project</a>
+              <a href="project_template/RPA_4기_프로젝트5.pdf" download="Joo_project_5.pdf">View Project</a><br>
+              <a href="https://github.com/Liamns/web_project">View Code</a>
             </div>
             <!-- End .project-info -->
           </div>
