--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="lead">
       <div id="lead-content">
         <h1>Joo Hyosung</h1>
-        <h2>Data Analyst</h2>
+
       </div>
       <!-- End #lead-content -->
 
@@ -72,11 +72,11 @@
           <div class="col-md-8">
             <p>
               <h4>
-                  팀원들과 원활한 관계를 유지하는 책임감 강한 신입 데이터
-                  애널리스트 주효성입니다.
+                  팀원들과 원활한 관계를 유지하는 책임감 강한 신입 컨설턴트 주효성입니다.
               </h4>
               여러 프로젝트에서 팀원들과의 원활한 의사소통
               과정 속 성공적인 프로젝트를 도출한 경험을 가지고 있습니다.
+              현재 직무에서 데이터 거버넌스 등 디지털 전략 컨설팅 업무를 진행하고 있습니다.
               저는 ‘자기 계발을 통해 끊임없는 발전을 계속하고, 이러한 가치를 발휘하기 위해 노력하는가.’를 중요하게 생각합니다. 
               자기 계발이란, 혼자만의 발전이 아닌 스스로와 속한 조직과 함께 발전하는 원동력이라고 생각합니다. 
               저는 나 혼자만의 발전이 아닌 내가 속한 조직과의 발전을 위한 자기 계발을 가장 큰 가치로 삼고, 이를 통해 느끼는 성취감을 원동력으로 발전해왔습니다. 
@@ -104,6 +104,16 @@
           </p>
         </div>
       </div>
+      <div id="experience-timeline">
+        <div data-date="April 2023 – 근무 중">
+          <h3>세종경영자문</h3>
+          <h4>신입</h4>
+          <p>
+            데이터 거버넌스 등 디지털 전략 컨설팅을 하며, '오산시 지능정보사회 종합계획 수립', '구리시 지능정보사회 종합계획 수립'
+            프로젝트를 수행했습니다.
+          </p>
+        </div>
+      </div>
     </div> 
     <!-- End #experience -->
 
@@ -120,6 +130,7 @@
           <li>2017 - 정부행정학부 학생회장 역임</li>
           <li>2018 - 정부행정학부 운영위원회 역임</li>
           <li>2019 - 공공행정학부 수료</li>
+          <li>2023 - 공공행정학부 졸업</li>
         </ul>
       </div>
       <!-- End .education-block -->
@@ -134,6 +145,17 @@
           <li>2023 01 - Python(Django)을 이용한 웹 구성하기</li>
           <li>2023 02 - Python(Django)을 이용한 웹 구성하기</li>
           <li>2023 03 - UI-Path를 이용한 RPA프로그래밍</li>
+        </ul>
+      </div>
+      <!-- End .education-block -->
+      <div class="education-block">
+        <h3>SWcamp PM 3기</h3>
+        <span class="education-date">October 2022 - March 2023</span>
+        <h4>SWcamp PM 3기</h4>
+        <ul>
+          <li>2023 07 - PM 용어 공부 및 역기획</li>
+          <li>2023 09 - 웹 서비스 기획</li>
+          <li>2023 10 - 웹 서비스 배포 및 개선</li>
         </ul>
       </div>
       <!-- End .education-block -->
