--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div id="experience-timeline">
-        <div data-date="April 2023 – ing">
+        <div data-date="April 2023">
           <h3>세종경영자문</h3>
           <h4>신입</h4>
           <p>
