--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
           </p>
         </div>
       </div>
+    </div>
+      <div id="experience" class="background-alt">
       <div id="experience-timeline">
-        <div data-vtdate="April 2023">
+        <div data-date="April 2023">
           <h3>세종경영자문</h3>
           <h4>신입</h4>
           <p>
