--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
       <div id="experience" class="background-alt">
       <div id="experience-timeline">
-        <div data-date="April 2023">
+        <div data-date="April 2023 - April 2023">
           <h3>세종경영자문</h3>
           <h4>신입</h4>
           <p>
