--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
         </div>
       </div>
       <div id="experience-timeline">
-        <div data-date="July 2021 – June 2022">
+        <div data-date="April 2023">
           <h3>세종경영자문</h3>
           <h4>신입</h4>
           <p>
-            데이터 거버넌스 등 디지털 전략 컨설팅을 하며, '오산시 지능정보사회 종합계획 수립', '구리시 지능정보사회 종합계획 수립'
-            프로젝트를 수행했습니다.
+            데이터 거버넌스 등 디지털 전략 컨설팅을 하며, '오산시 지능정보사회 종합계획 수립', '구리시 지능정보사회 종합계획 수립' 프로젝트를 수행했습니다.
           </p>
         </div>
       </div>
