--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
               My Github Address : 
               <a href="https://github.com/joohyosung" target="_blank"
                   ><i class="fa fa-github" aria-hidden="true"></i
+                ></a><br>
+              My Notion Address : 
+              <a href="https://www.notion.so/SWcamp-3-PM-d42117f12b6447eca1521e8950609c3c" target="_blank"
+                  ><i class="fa fa-notion" aria-hidden="true"></i
                 ></a>
             </p>
             
