--- a/index.html
+++ b/index.html
@@ -81,14 +81,9 @@
               자기 계발이란, 혼자만의 발전이 아닌 스스로와 속한 조직과 함께 발전하는 원동력이라고 생각합니다. 
               저는 나 혼자만의 발전이 아닌 내가 속한 조직과의 발전을 위한 자기 계발을 가장 큰 가치로 삼고, 이를 통해 느끼는 성취감을 원동력으로 발전해왔습니다. 
               이러한 저의 강점을 잘 살릴 수 있는 직무 속에서 성취감을 가지고 일하고 싶습니다.<br>
-              My Github Address : 
-              <a href="https://github.com/joohyosung" target="_blank"
-                  ><i class="fa fa-github" aria-hidden="true"></i
-                ></a><br>
-              My Notion Address : 
-              <a href="https://www.notion.so/SWcamp-3-PM-d42117f12b6447eca1521e8950609c3c" target="_blank"
-                  ><i class="fa fa-notion" aria-hidden="true"></i
-                ></a>
+              My Github Address : https://github.com/joohyosung <br>
+              My Notion Address : https://www.notion.so/SWcamp-3-PM-d42117f12b6447eca1521e8950609c3c
+
             </p>
             
           </div>
