--- a/index.html
+++ b/index.html
@@ -103,8 +103,11 @@
           </p>
         </div>
       </div>
+    </div> 
+    <div id="experience" class="background-alt">
+      <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
-        <div data-date="April 2023 - April 2023">
+        <div data-date="July 2021 – June 2022">
           <h3>세종경영자문</h3>
           <h4>신입</h4>
           <p>
@@ -112,7 +115,7 @@
           </p>
         </div>
       </div>
-    </div> 
+    </div>
     <!-- End #experience -->
 
     <div id="education">
