--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
     </div>
     <!-- End #about -->
     
-    <div id="education">
+    <div id="education" style="background-color: #F2F2F5;">
       <h2 class="heading">Experience</h2>
       <div class="education-block">
         <h3>이엘공간디자인</h3>
         <span class="education-date">July 2021 - June 2022</span>
         <h4>인턴</h4>
-        <h2>현장 보조 역할을 하며 현장에서 팀원들과 유대를 쌓으며 혼자 일하는 것이 아닌 팀으로 일하는 법을 배웠습니다.</h2>
+        <p>현장 보조 역할을 하며 현장에서 팀원들과 유대를 쌓으며 혼자 일하는 것이 아닌 팀으로 일하는 법을 배웠습니다.</p>
         <ul>
           <li>2021.07 - 입사</li>
           <li>2022.06 - 퇴사</li>
@@ -107,9 +107,9 @@
       <!-- End .education-block -->
       <div class="education-block">
         <h3>세종경영자문</h3>
-        <span class="education-date">April 2023 - </span>
+        <span class="education-date">April 2023 - 재직중</span>
         <h4>컨설턴트</h4>
-        <h2>데이터 거버넌스 등 디지털 전략 컨설팅을 하며, '오산시 지능정보사회 종합계획 수립', '구리시 지능정보사회 종합계획 수립' 프로젝트를 수행했습니다.</h2>
+        <p>데이터 거버넌스 등 디지털 전략 컨설팅을 하며, '오산시 지능정보사회 종합계획 수립', '구리시 지능정보사회 종합계획 수립' 프로젝트를 수행했습니다.</p>
         <ul>
           <li>2023.04 - 입사</li>
           <li>2023.10 - 재직중</li>
