--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
     <!-- End #experience -->
 
-    <div id="education">
+    <div id="education" style="background-color: #FFFFFF;">
       <h2 class="heading">Education</h2>
       <div class="education-block">
         <h3>고려대학교 세종캠퍼스</h3>
