--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
             <div class="project-info">
               <h3>웹 서비스 기획 및 배포</h3>
               <p>
-                노코드툴인 Webflow를 활용하여 문제정의부터 시작하여 웹 서비스를 기획하고 배포한 후 
-                GA를 활용하여 데이터를 기반으로 개선점을 찾아 개선하는 프로젝트를 진행
+                노코드툴인 Webflow와 Javascript를 활용하여 문제정의부터 시작하여 웹 서비스를 기획하고 
+                배포한 후 GA를 활용하여 데이터를 기반으로 개선점을 찾아 개선하는 프로젝트를 진행
               </p>
               <a href="project_template/투두일리 최종발표_231024_153818.pdf" download="투두일리 최종발표_231024_153818.pdf">View Project</a><br>
               <a href="https://todoily.webflow.io/">View Site</a>
