--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     </div>
     <!-- End #projects -->      
 
-    <div id="skills">
+    <div id="skills" style="background-color: #FFFFFF;">
       <h2 class="heading">Skills</h2>
       <ul>
         <li>Python</li>
