--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     
     <div id="education" style="background-color: #F2F2F5;">
       <h2 class="heading">Experience</h2>
-      <div class="education-block">
+      <div class="education-block" style="background-color: #FFFFFF;">
         <h3>이엘공간디자인</h3>
         <span class="education-date">July 2021 - June 2022</span>
         <h4>인턴</h4>
@@ -106,7 +106,7 @@
         </ul>
       </div>
       <!-- End .education-block -->
-      <div class="education-block">
+      <div class="education-block" style="background-color: #FFFFFF;">
         <h3>세종경영자문</h3>
         <span class="education-date">April 2023 - 재직중</span>
         <h4>컨설턴트</h4>
@@ -247,8 +247,9 @@
             <div class="project-info">
               <h3>웹 서비스 기획 및 배포</h3>
               <p>
-                노코드툴인 Webflow와 Javascript를 활용하여 문제정의부터 시작하여 웹 서비스를 기획하고 
-                배포한 후 GA를 활용하여 데이터를 기반으로 개선점을 찾아 개선하는 프로젝트를 진행
+                노코드툴인 Webflow와 Javascript를 활용하여 문제정의부터
+                시작하여 웹 서비스를 기획하고 배포한 후 GA를 활용하여
+                데이터를 기반으로 개선점을 찾아 개선하는 프로젝트를 진행
               </p>
               <a href="project_template/투두일리 최종발표_231024_153818.pdf" download="투두일리 최종발표_231024_153818.pdf">View Project</a><br>
               <a href="https://todoily.webflow.io/">View Site</a>
