--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
         <span class="education-date">July 2023 - October 2023</span>
         <h4>SWcamp PM 3기</h4>
         <ul>
-          <li>2023 07 - PM 용어 공부 및 역기획</li>
+          <li>2023 07 - PM 용어 공부 및 배달의 민족 서비스 역기획</li>
+          <li>2023 08 - 스페이스 클라우드 서비스 역기획</li>
           <li>2023 09 - 웹 서비스 기획</li>
           <li>2023 10 - 웹 서비스 배포 및 개선</li>
         </ul>
