--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <a href="#about">About</a>
         </li>
         <li>
-          <a href="#experience">Experience</a>
+          <a href=".experience">Experience</a>
         </li>
         <li>
-          <a href="#education">Education</a>
+          <a href=".education">Education</a>
         </li>
         <li>
           <a href="#projects">Projects</a>
@@ -92,7 +92,7 @@
     </div>
     <!-- End #about -->
     
-    <div id="experience" style="background-color: #F2F2F5;">
+    <div id="education" class="experience style="background-color: #F2F2F5;">
       <h2 class="heading">Experience</h2>
       <div class="education-block" style="background-color: #FFFFFF;">
         <h3>이엘공간디자인</h3>
@@ -119,7 +119,7 @@
       </div>
     <!-- End #experience -->
 
-    <div id="education" style="background-color: #FFFFFF;">
+    <div id="education" class="education" style="background-color: #FFFFFF;">
       <h2 class="heading">Education</h2>
       <div class="education-block">
         <h3>고려대학교 세종캠퍼스</h3>
