--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
     <!-- End #about -->
     
-    <div id="education" class="experience style="background-color: #F2F2F5;">
+    <div id="education" class="experience" style="background-color: #F2F2F5;">
       <h2 class="heading">Experience</h2>
       <div class="education-block" style="background-color: #FFFFFF;">
         <h3>이엘공간디자인</h3>
