--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="col-md-8">
             <p>
               <h4>
-                  팀원들과 원활한 관계를 유지하는 책임감 강한 신입 컨설턴트 주효성입니다.
+                  팀원들과 원활한 관계를 유지하는 책임감 강한 주효성입니다.
               </h4>
               여러 프로젝트에서 팀원들과의 원활한 의사소통
               과정 속 성공적인 프로젝트를 도출한 경험을 가지고 있습니다.
